--- a/views/officer/dashboard.ejs
+++ b/views/officer/dashboard.ejs
@@ -14,15 +14,15 @@
         <li class="nav-item">
             <a class="nav-link active" id="staffs-tab" data-toggle="tab" href="#staffs" role="tab"
                 aria-controls="staffs" aria-selected="true">
-                <i class="fas fa-user"></i> <%=staff.name %> </a>
+                <i class="fas fa-user"></i> <%=staff.name %> 
+            </a>
         </li>
 
         <!-- Complaints history nav-->
         <li class="nav-item">
             <a class="nav-link" id="complaints-tab" href="/officer/complaints" role="tab" aria-controls="complaints"
                 aria-selected="false">
-                <i class="fas fa-envelope-open-text"></i>
-                Complaints</a>
+                <i class="fas fa-history"></i> Complaints History</a>
         </li>
     </ul>
 
@@ -42,26 +42,29 @@
                                         <tr>
                                             <th scope="col" class="bold">#</th>
                                             <th scope="col" class="bold"><i class="fas fa-bullhorn"></i> Complaints</th>
-                                            <th scope="col" class="bold"><i class="fas fa-calendar-alt" aria-hidden="true"></i> Date</th>
+                                            <th scope="col" class="bold"><i class="fas fa-calendar-alt"
+                                                    aria-hidden="true"></i> Date</th>
                                             <th scope="col" class="bold">Reply</th>
 
                                         </tr>
                                     </thead>
                                     <tbody>
+                                        <% const filterComplaints = complaints.filter(complaint =>   complaint.status === 'pending') %>
+
                                         <% count = 0 %>
-                                        <% complaints.forEach((complaint) => { %>
+                                        <% filterComplaints.forEach((complaint) => { %>
                                         <tr>
                                             <th scope="row"><%= count++ %></th>
                                             <td><%= complaint.description %></td>
                                             <td><%= complaint.date %></td>
-                                            <td><a href="#" onclick="show('<%= complaint._id%>')">Reply <i
-                                                    class="fas fa-pencil-alt"></i></a> 
+                                            <td>
+                                                <a href="#" onclick="showreplyBox('<%= complaint._id%>')"> Reply <i class="fas fa-pencil-alt"></i> </a>
 
-                                                <input id="desc_<%=complaint._id%>" type="hidden" value="<%=complaint.description%>" />
+                                                <input id="desc_<%=complaint._id%>" type="hidden"
+                                                    value="<%=complaint.description%>" />
                                             </td>
-                                            
                                         </tr>
-                                        <% }) %>
+                                        <% }); %>
 
                                     </tbody>
                                 </table>
@@ -75,15 +78,17 @@
 
                     <div class="col-md-4 mt-4" style="display: none;" id="reply-field">
                         <div class="card">
-                            <div class="card-header">Reply Complaint :</div>
+                            <div class="card-header">
+                                <span id="complaint-text"></span>
+                            </div>
                             <div class="card-body">
 
-                                <span id="complaint_text" class="text-success"></span>
-
-                                <form action="" method="post">
+                                <form action="/complaints/feedback" method="post">
                                     <div class="form-group">
-                                        <textarea name="reply" placeholder="Reply Complaint Here..."
+                                        <textarea name="feedback" placeholder="Reply Complaint Here..."
                                             class="form-control" style="height:100px;" required="required"></textarea>
+                                        
+                                        <input type="hidden" name="complaintId" id="complaintId" value="">
 
                                         <button type="submit" class="btn btn-primary btn-block my-3">Reply</button>
                                 </form>
@@ -92,9 +97,6 @@
                         </div>
                     </div>
                 </div>
-
-
-
             </div>
         </div>
 
@@ -109,12 +111,14 @@
 <script>
     const replyField = document.getElementById('reply-field')
     const complaintsField = document.getElementById('complaints')
-    const complaintText  = document.getElementById("complaint_text")
-    function show(id) {
-        const body = document.getElementById("desc_"+id).value
-	    complaintText.innerHTML = body
-        complaintsField.classList.add('col-md-8')
-        replyField.style.display = 'block'
+    const complaintText = document.getElementById("complaint-text")
+    const complaintId = document.getElementById('complaintId')
+    function showreplyBox(id) {
+        const body = document.getElementById("desc_" + id).value;
+        complaintText.innerHTML = body;
+        complaintId.value = id;
+        complaintsField.classList.add('col-md-8');
+        replyField.style.display = 'block';
     }
 </script>
 
