controllers component added on desgin pattern

--- a/views/complaints/add.ejs
+++ b/views/complaints/add.ejs
@@ -12,9 +12,14 @@
                 <div class="form-group">
                     <label for="category">Choose Category</label>
                     <select name="category" class="browser-default custom-select" required>
-                        <option value="transport">Transport</option>
-                        <option value="agriculture">Agriculture</option>
-                        <option value="drinking water">Drinking Water</option>
+                        <option value="Transportation">Transportation</option>
+                        <option value="Agriculture">Agriculture</option>
+                        <option value="Drinking Water">Drinking Water</option>
+                        <option value="Electricity">Electricity</option>
+                        <option value="Health">Health</option>
+                        <option value="Security">Security</option>
+                        <option value="Others">Others</option>
+
                     </select>
                 </div>
 
