--- a/views/officer/complaints.ejs
+++ b/views/officer/complaints.ejs
@@ -24,7 +24,7 @@
     </ul>
 
 
-    <div class="row">
+    <div class="row py-5">
       <div class="col">
         <div class="card">
           <div class="card-body">
