--- a/views/staff/dashboard.ejs
+++ b/views/staff/dashboard.ejs
@@ -4,7 +4,7 @@
 
 
 <div class="alert alert-success" role="alert" style="margin: 10px 50px;">
-    <strong>Welcome To Officer Dashbord !</strong>
+    <strong>Welcome To staff Dashbord !</strong>
 </div>
 
 <div class="container">
@@ -20,7 +20,7 @@
 
         <!-- Complaints history nav-->
         <li class="nav-item">
-            <a class="nav-link" id="complaints-tab" href="/officer/complaints" role="tab" aria-controls="complaints"
+            <a class="nav-link" id="complaints-tab" href="/staff/complaints" role="tab" aria-controls="complaints"
                 aria-selected="false">
                 <i class="fas fa-history"></i> Complaints History</a>
         </li>
@@ -83,7 +83,7 @@
                             </div>
                             <div class="card-body">
 
-                                <form action="/complaints/feedback" method="post">
+                                <form action="/staff/complaints/feedback" method="post">
                                     <div class="form-group">
                                         <textarea name="feedback" placeholder="Reply Complaint Here..."
                                             class="form-control" style="height:100px;" required="required"></textarea>
