--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -1,9 +1,8 @@
 <%- include('../partials/_header.ejs') %>
 <%- include('../partials/_navbar.ejs') %>
 
-
-<div class="alert alert-success" role="alert" style="margin: 10px 140px;">
-    <strong>Welcome To Admin Dashbord !</strong>
+<div class="alert alert-success" role="alert" style="margin: 10px 60px;">
+    <strong>Welcome To Admin Dashbord Mr. <%= admin.name %> !</strong>
 </div>
 
 <section id="admin-dashboard">
@@ -26,7 +25,7 @@
 
 
             <li class="nav-item">
-                <a class="nav-link" id="users-tab" href="/users/display" role="tab" aria-controls="users"
+                <a class="nav-link" id="users-tab" href="/admin/users/display" role="tab" aria-controls="users"
                     aria-selected="true">
                     <i class="fas fa-user-ninja"></i>
                     Users</a>
