--- a/views/staff/complaints.ejs
+++ b/views/staff/complaints.ejs
@@ -2,22 +2,22 @@
 <%- include('../partials/_navbar.ejs') %>
 
 <div class="alert alert-success" role="alert" style="margin: 10px 50px;">
-  <strong>Welcome To Officer Dashbord !</strong>
+  <strong>Welcome To staff Dashbord !</strong>
 </div>
 
-<section id="officer-dashboard">
+<section id="staff-dashboard">
   <div class="container">
     <ul class="nav nav-tabs" id="myTab" role="tablist">
 
       <li class="nav-item">
-        <a class="nav-link" id="officer-tab" href="/officer/dashboard" role="tab" aria-controls="officers"
+        <a class="nav-link" id="staff-tab" href="/staff/dashboard" role="tab" aria-controls="staffs"
             aria-selected="true">
             <i class="fas fa-user"></i>
            <%=staff.name %></a>
       </li>
 
       <li class="nav-item">
-        <a class="nav-link active" id="complaints-tab" href="/officer/complaints" role="tab" aria-controls="complaints"
+        <a class="nav-link active" id="complaints-tab" href="/staff/complaints" role="tab" aria-controls="complaints"
           aria-selected="false">
           <i class="fas fa-history"></i> Complaints History</a>
       </li>
