--- a/views/admin/displayusers.ejs
+++ b/views/admin/displayusers.ejs
@@ -31,8 +31,7 @@
             </li>
         </ul>
 
-
-
+    <%- include('../partials/_messages.ejs') %>
 
         <div class="tab-content" id="myTabContent">
             <div class="tab-pane fade show active" id="users" role="tabpanel" aria-labelledby="users-tab">
@@ -110,6 +109,7 @@
                             </div>
                         </div>
                     </div>
+
                 </div>
             </div>
 
