--- a/views/admin/forms/admin_register.ejs
+++ b/views/admin/forms/admin_register.ejs
@@ -3,7 +3,7 @@
 <div class="text-center ">
     <div class="container">
 
-        <form action="/users/register" method="POST">
+        <form action="/admin/users/register" method="POST">
             <div class="form-group">
                 <input type="text" name="name" placeholder="Name"
                     value="<%= typeof (name) != 'undefined' ? name : '' %>" class="form-control" required />
