--- a/views/admin/forms/staff_register.ejs
+++ b/views/admin/forms/staff_register.ejs
@@ -3,14 +3,14 @@
 <div class="">
     <div class="container">
 
-        <form action="/users/register" method="POST">
+        <form action="/admin/users/register" method="POST">
             <div class="form-group">
                 <input type="text" name="name" placeholder="Name"
                     value="<%= typeof (name) != 'undefined' ? name : '' %>" class="form-control" required />
             </div>
 
             <div class="form-group">
-                <input type="email" placeholder="Email" name="email"
+                <input type="email" placeholder="Enter email.." name="email"
                     value="<%= typeof (email) != 'undefined' ? email : '' %>" class="form-control" required />
             </div>
 
