--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -14,7 +14,7 @@
                     <form action="/users/login" method="POST">
 
                         <div class="form-group">
-                            <input type="email" placeholder="Email" name="email" class="form-control" required />
+                            <input type="email" placeholder="Enter email.." name="email" class="form-control" required />
                         </div>
 
                         <div class="form-group">
@@ -40,7 +40,7 @@
                 <i class="fas fa-exclamation-triangle"></i> Only Authorised Staff Allowed
             </div>
             <div class="card-body">
-                Please Provide The Correct Email And Password To Login Staff or System Administrator
+                Please provide correct email and password to login as staff system administrator.
             </div>
         </div>
     </div>
