dead code removed

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,7 @@
         <ul class="nav nav-tabs" id="myTab" role="tablist">
             <li class="nav-item">
                 <a class="nav-link active" id="complaint-tab" data-toggle="tab" href="#complaint" role="tab"
-                    aria-controls="complaint" aria-selected="true">Complaints</a>
+                    aria-controls="complaint" aria-selected="true"> <i class="fa fa-id-card" aria-hidden="true"></i> Complaints</a>
             </li>
 
             <li class="nav-item">
