--- a/views/feedback/view.ejs
+++ b/views/feedback/view.ejs
@@ -7,12 +7,13 @@
   <ul class="nav nav-tabs" id="myTab" role="tablist">
     <li class="nav-item">
       <a class="nav-link" id="home-tab" href="/" role="tab" aria-controls="home" aria-selected="true">
-        Complaints</a>
+        <i class="fa fa-id-card" aria-hidden="true"></i> Complaints</a>
     </li>
 
     <li class="nav-item">
       <a class="nav-link active" id="feedback-tab" data-toggle="tab" href="#feedback" role="tab"
         aria-controls="feedback" aria-selected="true">
+        <i class="fas fa-envelope-open-text"></i>
         Feedback</a>
     </li>
   </ul>
