session and media query settled

--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -57,7 +57,7 @@
 
                             <!-- Staff Registration section-->
                             <div id="staff-form" style="display : none;">
-                                <div class="card m-5">
+                                <div class="card mt-5">
                                     <div class="card-header">Create Staff Account <i class="fa fa-briefcase"
                                             aria-hidden="true"></i></div>
                                     <div class="card-body">
@@ -69,7 +69,7 @@
 
                             <!-- Admin Registration section-->
                             <div id="admin-form" style="display : none;">
-                                <div class="card m-5">
+                                <div class="card mt-5">
                                     <div class="card-header">Create Admin Account <i class="fa fa-briefcase"
                                             aria-hidden="true"></i></div>
                                     <div class="card-body">
