--- a/views/admin/forms/staff_register.ejs
+++ b/views/admin/forms/staff_register.ejs
@@ -1,8 +1,5 @@
-
-
-<div class="">
+<div class="text-center mt-4">
     <div class="container">
-
         <form action="/admin/users/register" method="POST">
             <div class="form-group">
                 <input type="text" name="name" placeholder="Name"
@@ -15,16 +12,16 @@
             </div>
 
             <div class="form-group">
-                    <label for="category">Department</label>
-                    <select name="department" class="browser-default custom-select" required>
-                        <option value="Transportation">Transportation</option>
-                        <option value="Agriculture">Agriculture</option>
-                        <option value="Health">Health</option>
-                        <option value="Education">Education</option>
-                        <option value="Drinking Water">Drinking Water</option>
-                        <option value="Others">Others</option>
-                    </select>
-                </div>
+                <label for="category">Department</label>
+                <select name="department" class="browser-default custom-select" required>
+                    <option value="Transportation">Transportation</option>
+                    <option value="Agriculture">Agriculture</option>
+                    <option value="Health">Health</option>
+                    <option value="Education">Education</option>
+                    <option value="Drinking Water">Drinking Water</option>
+                    <option value="Others">Others</option>
+                </select>
+            </div>
 
             <div class="form-group">
                 <input type="password" name="password" placeholder="Password"
@@ -37,19 +34,10 @@
                     required />
             </div>
 
-         <input type="text" name="role" value="staff" hidden>
+            <input type="text" name="role" value="staff" hidden>
 
             <button class="btn btn-primary btn-block" type="submit">Register</button>
 
         </form>
-     
-
-
     </div>
-
 </div>
-
-
-
-
-
