--- a/views/complaints/add.ejs
+++ b/views/complaints/add.ejs
@@ -33,7 +33,7 @@
         </div>
 
 
-        <div class="col-md-6">
+        <div class="col-md-6" id="home-instruction">
                 <div class="card">
                         <h4 class="card-header"><a>How To Use ?</a></h4>
                         <div class="card-body">
