--- a/views/feedback/view.ejs
+++ b/views/feedback/view.ejs
@@ -38,7 +38,7 @@
           </form>
         </div>
 
-        <div class="col-md-6">
+        <div class="col-md-6" id="feedback-status">
           <div class="card">
             <div class="card-header">Complaint Feedback Status : </div>
             <div class="card-body">
