--- a/public/assets/css/responsive.css
+++ b/public/assets/css/responsive.css
@@ -35,8 +35,7 @@
 
 @media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
 
-  //CSS
-
+ 
 }
 
 /*
@@ -45,8 +44,10 @@
 */
 
 @media (min-width: 481px) and (max-width: 767px) {
+  #home-instruction , #feedback-status, #login-instruction, #forward-complaints, #staff-form{
+    margin-top: 60px;
+  }
 
-  
 
 }
 
@@ -56,7 +57,8 @@
 */
 
 @media (min-width: 320px) and (max-width: 480px) {
-
-
+  #home-instruction, #feedback-status, #login-instruction,  #forward-complaints,  #staff-form {
+    margin-top: 60px;
+  }
 
 }
