--- a/views/admin/forms/admin_register.ejs
+++ b/views/admin/forms/admin_register.ejs
@@ -1,6 +1,6 @@
 
 
-<div class="text-center ">
+<div class="text-center mt-4">
     <div class="container">
 
         <form action="/admin/users/register" method="POST">
