--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -1,10 +1,11 @@
 <%- include('../partials/_header.ejs') %>
 <%- include('../partials/_navbar.ejs') %>
 
-<div class="row p-3 mt-5">
-
-    <div class="col-md-6 text-center px-5">
-        <div class="container" style="padding: 0px 100px 0px 100px;">
+<div class="container">
+    
+<div class="row">
+    <div class="col-md-6 text-center">
+        <div class="container">
 
             <div class="card">
                 <div class="card-header"> <i class="fas fa-user-plus"></i> Login </div>
@@ -34,7 +35,7 @@
     </div>
 
 
-    <div class="col-md-4">
+    <div class="col-md-4" id="login-instruction">
         <div class="card">
             <div class="card-header text-danger">
                 <i class="fas fa-exclamation-triangle"></i> Only Authorised Staff Allowed
@@ -48,6 +49,7 @@
 </div>
 
 
+</div>
 
 
 
