github-corner added

--- a/views/error/404.ejs
+++ b/views/error/404.ejs
@@ -1,4 +1,5 @@
 <%- include('../partials/_header.ejs') %>
+<%- include('../partials/_github-corner.ejs') %>
 <%- include('../partials/_navbar.ejs') %>
 
 <main style="height: 85vh;">
@@ -6,10 +7,9 @@
             <div class="row mt-5 p-5">
                 <div class="col text-center">
                         <i class="fas fa-10x fa-theater-masks text-muted"></i>
-                        <h1 class="text-muted mt-3">Error: 404 | Page Not Found </h1> 
-                      <h4 class="text-dark mt-3">  The page you've requested has not been found.Check the url and try again.</h4>
-
-                      <a href="/" class="btn btn-outline-dark btn-lg mt-4" role="button">Back To Home Page</a>
+                        <h1 class="text-muted mt-3">404 - Page Not Found</h1> 
+                      <h4 class="text-muted mt-3"> The page you are looking for might have been removed has its name changed or is temporarily unavailable.</h4>
+                      <a href="/" class="btn btn-primary btn-lg mt-4" role="button">Back To Home Page</a>
                 </div>
             </div>
         </div>
