--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,8 @@
 <%- include('./partials/_header.ejs') %>
 
-<%- include('./partials/_navbar.ejs') %>
+<%- include('./partials/_github-corner.ejs') %>
 
+<%- include('./partials/_navbar.ejs') %>
 
 
 <section id="home-page">
