--- a/views/staff/complaints.ejs
+++ b/views/staff/complaints.ejs
@@ -1,4 +1,5 @@
 <%- include('../partials/_header.ejs') %>
+<%- include('../partials/_github-corner.ejs') %>
 <%- include('../partials/_navbar.ejs') %>
 
 <div class="alert alert-success" role="alert" style="margin: 10px 50px;">
