--- a/views/staff/dashboard.ejs
+++ b/views/staff/dashboard.ejs
@@ -1,5 +1,5 @@
 <%- include('../partials/_header.ejs') %>
-
+<%- include('../partials/_github-corner.ejs') %>
 <%- include('../partials/_navbar.ejs') %>
 
 
