--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -1,4 +1,5 @@
 <%- include('../partials/_header.ejs') %>
+<%- include('../partials/_github-corner.ejs') %>
 <%- include('../partials/_navbar.ejs') %>
 
 <div class="container">
